--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.4.10
-  - 2.5.8
-  - 2.6.6
+  - 2.6.8
+  - 2.7.4
 
 branches:
   only:
     - master
+    - feature/start-stop-ticket
 
 addons:
   postgresql: "9.6"
 
 env:
-  - REDMINE_VER=4.0-stable
   - REDMINE_VER=4.1-stable
+  - REDMINE_VER=4.2-stable
   - REDMINE_VER=master
 
 install: "echo skip bundle install"
